Profile: Fix flickering on iOS (#1245)

--- a/src/components/right/Profile.scss
+++ b/src/components/right/Profile.scss
@@ -2,6 +2,8 @@
   height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 
   @supports (overflow-y: overlay) {
     overflow-y: overlay !important;
